DIG-2212 Refatorisation galore!
* Change project layout to comply with composer package convention
* Uses composer to manage 3rd party packages
* Uses composers autoloader to manage name spaces and loading
* Uses handlebars to render pages - sharing most of the templates with the node sample app
* Uses styling from the node sample project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,11 @@ services:
     image: php:5-apache
 
     volumes:
-      - "./src:/var/www/html"
+      - "./public:/var/www/html"
+      - "./src:/var/www/src"
+      - "./config:/var/www/config"
+      - "./resources:/var/www/resources"
+      - "./vendor:/var/www/vendor"
 
     ports:
       - "8080:80"
