DIG-2212: Moved Diglias generic classes to a separate Diglias namespace

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   },
   "autoload": {
     "psr-4": {
-      "sample\\": "src/"
+      "sample\\": "src/sample",
+      "Diglias\\": "src/Diglias"
     }
   }
 }
