Updated config files and code to replace diglias with idfyed

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "autoload": {
     "psr-4": {
       "sample\\": "src/sample",
-      "Diglias\\": "src/Diglias"
+      "IdFyed\\": "src/IdFyed"
     }
   }
 }
