Returned all comments pointing to idfyed when the correct name to use is diglias referring as apis and services

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "autoload": {
     "psr-4": {
       "sample\\": "src/sample",
-      "IdFyed\\": "src/IdFyed"
+      "Diglias\\": "src/Diglias"
     }
   }
 }
